<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="eu.rivetgroup.security.cryptonotepad.activities.CryptoNotesViewNote">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttons">
        <TextView
            android:id="@+id/notePreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales eu nulla ac euismod. Nulla eget dignissim nisl. Praesent laoreet malesuada ex, sed cursus orci aliquam dignissim. Nullam at sem nibh. Maecenas a pharetra enim, ut venenatis lacus. Duis imperdiet leo dui, vitae gravida nibh volutpat sit amet. Morbi quis finibus nisi. Cras imperdiet ante tempus lectus rutrum, sed pellentesque mi facilisis. Donec imperdiet turpis nunc, tristique semper magna sodales vel. Aliquam placerat, neque sed dictum pretium, nunc nibh eleifend est, vitae blandit nisl neque ac ante. Mauris vitae nisl sit amet orci ultricies facilisis ac eget neque. Curabitur venenatis pulvinar ligula sit amet laoreet. Donec felis mauris, pharetra eu euismod eget, facilisis non mi. Etiam iaculis urna a leo feugiat, et molestie mi sodales. Suspendisse aliquet et ante id dignissim. Lorem ipsum dolor sit amet, consectetur adipiscing elit.

Maecenas in turpis tristique, gravida orci ac, faucibus nibh. Vestibulum et sapien aliquam, auctor nunc at, sollicitudin erat. Quisque interdum posuere pellentesque. Ut in nisi ut metus ornare fermentum at quis lorem. Nam semper, augue vel lacinia pellentesque, quam libero vehicula mauris, eu eleifend ipsum neque sed elit. Donec convallis quam sit amet ex consequat, eget blandit est tempor. Suspendisse nec odio a velit feugiat tincidunt at in tortor. Donec iaculis eros placerat leo fringilla sodales. Mauris molestie, mauris eu rutrum interdum, est lorem imperdiet quam, congue vehicula nibh urna a libero."/>
    </ScrollView>


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:divider="?android:attr/dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="beginning">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureWithLargestChild="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button_back"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:maxLines="2"
                android:onClick="onClickBack"
                android:text="@string/button_back"/>

            <Button
                android:id="@+id/button_delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:filterTouchesWhenObscured="true"
                android:maxLines="2"
                android:onClick="onClickDelete"
                android:text="@string/button_delete"/>

            <Button
                android:id="@+id/button_edit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:filterTouchesWhenObscured="true"
                android:maxLines="2"
                android:onClick="onClickEdit"
                android:text="@string/button_edit"/>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
